examples/test/testpolicy10134.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10134
  namespace: namespace430
spec:
  podSelector:
    matchLabels:
      key32: value3
      key36: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value8
          key42: value12
      podSelector:
        matchLabels:
          key22: value0
